--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
       background: linear-gradient(to right, #667eea, #764ba2);
       color: white;
       text-align: center;
+      padding: 20px;
     }
     #login h2 {
       margin-bottom: 20px;
+      font-size: 1.8rem;
     }
     #login input {
       padding: 12px;
@@ -37,7 +39,7 @@
     }
     .keypad {
       display: grid;
-      grid-template-columns: repeat(3, 60px);
+      grid-template-columns: repeat(3, 70px);
       gap: 10px;
       justify-content: center;
     }
@@ -67,12 +69,13 @@
     /* --- CONTENIDO PRINCIPAL --- */
     #content {
       display: none;
+      padding-bottom: 50px;
     }
 
     h1 {
       text-align: center;
-      padding: 40px;
-      font-size: 2.5rem;
+      padding: 30px 15px;
+      font-size: 2rem;
       background: linear-gradient(90deg, #00c6ff, #0072ff, #00c6ff);
       background-size: 200%;
       -webkit-background-clip: text;
@@ -81,7 +84,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 15px;
+      gap: 10px;
+      flex-wrap: wrap;
     }
     @keyframes shine {
       from { background-position: 0%; }
@@ -90,7 +94,7 @@
 
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
       gap: 15px;
       padding: 20px;
       max-width: 1000px;
@@ -103,7 +107,7 @@
       box-shadow: 0 6px 15px rgba(0,0,0,0.3);
       cursor: pointer;
       transition: transform 0.4s ease;
-      height: 100%; /* más pequeño */
+      height: 220px;
     }
     .card img {
       width: 100%;
@@ -123,7 +127,7 @@
       background: rgba(0,0,0,0.6);
       color: #fff;
       text-align: center;
-      font-size: 1rem;
+      font-size: 0.9rem;
       opacity: 0;
       transition: opacity 0.5s;
     }
@@ -149,8 +153,8 @@
     }
 
     .stitch-icon {
-      width: 120px;
-      height: 120px;
+      width: 90px;
+      height: 90px;
       object-fit: contain;
     }
 
@@ -179,27 +183,29 @@
       align-items: center;
       justify-content: center;
       z-index: 999;
+      padding: 15px;
     }
     .letter {
       background: #fff;
-      padding: 25px;
-      max-width: 600px;
+      padding: 20px;
+      max-width: 90%;
       border-radius: 20px;
       box-shadow: 0 6px 20px rgba(0,0,0,0.3);
       text-align: center;
       animation: fadeIn 1s ease;
     }
     .letter h2 {
-      margin-bottom: 15px;
+      margin-bottom: 10px;
       color: #0072ff;
+      font-size: 1.4rem;
     }
     .letter p {
-      font-size: 1.1rem;
-      line-height: 1.6;
+      font-size: 1rem;
+      line-height: 1.5;
       color: #333;
     }
     .close-btn {
-      margin-top: 20px;
+      margin-top: 15px;
       padding: 10px 20px;
       border: none;
       border-radius: 10px;
@@ -210,6 +216,36 @@
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.9); }
       to { opacity: 1; transform: scale(1); }
+    }
+
+    /* 📱 ADAPTACIÓN A CELULAR */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+        padding: 20px 10px;
+      }
+      .stitch-icon {
+        width: 60px;
+        height: 60px;
+      }
+      .gallery {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+      }
+      .card {
+        height: 160px;
+      }
+      #login h2 {
+        font-size: 1.5rem;
+      }
+      .keypad {
+        grid-template-columns: repeat(3, 60px);
+        gap: 8px;
+      }
+      .keypad button {
+        font-size: 1rem;
+        padding: 12px;
+      }
     }
   </style>
 </head>
@@ -328,4 +364,5 @@
   </script>
 </body>
 </html>
+
 
