--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
     #login h2 {
       margin-bottom: 20px;
-      font-size: 1.8rem;
+      font-size: 1.6rem;
     }
     #login input {
       padding: 12px;
@@ -40,11 +40,11 @@
     .keypad {
       display: grid;
       grid-template-columns: repeat(3, 70px);
-      gap: 10px;
+      gap: 12px;
       justify-content: center;
     }
     .keypad button {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       padding: 15px;
       border: none;
       border-radius: 10px;
@@ -69,7 +69,6 @@
     /* --- CONTENIDO PRINCIPAL --- */
     #content {
       display: none;
-      padding-bottom: 50px;
     }
 
     h1 {
@@ -94,9 +93,9 @@
 
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-      gap: 15px;
-      padding: 20px;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 12px;
+      padding: 15px;
       max-width: 1000px;
       margin: auto;
     }
@@ -123,7 +122,7 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      padding: 10px;
+      padding: 8px;
       background: rgba(0,0,0,0.6);
       color: #fff;
       text-align: center;
@@ -153,8 +152,8 @@
     }
 
     .stitch-icon {
-      width: 90px;
-      height: 90px;
+      width: 80px;
+      height: 80px;
       object-fit: contain;
     }
 
@@ -182,70 +181,53 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 20px;
       z-index: 999;
-      padding: 15px;
     }
     .letter {
       background: #fff;
       padding: 20px;
-      max-width: 90%;
-      border-radius: 20px;
+      width: 100%;
+      max-width: 500px;
+      border-radius: 15px;
       box-shadow: 0 6px 20px rgba(0,0,0,0.3);
       text-align: center;
       animation: fadeIn 1s ease;
     }
     .letter h2 {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       color: #0072ff;
       font-size: 1.4rem;
     }
     .letter p {
       font-size: 1rem;
-      line-height: 1.5;
+      line-height: 1.6;
       color: #333;
     }
     .close-btn {
-      margin-top: 15px;
+      margin-top: 20px;
       padding: 10px 20px;
       border: none;
       border-radius: 10px;
       background: #ff4f81;
       color: white;
       cursor: pointer;
+      font-size: 1rem;
     }
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.9); }
       to { opacity: 1; transform: scale(1); }
     }
 
-    /* 📱 ADAPTACIÓN A CELULAR */
+    /* --- RESPONSIVE --- */
     @media (max-width: 600px) {
-      h1 {
-        font-size: 1.5rem;
-        padding: 20px 10px;
-      }
-      .stitch-icon {
-        width: 60px;
-        height: 60px;
-      }
-      .gallery {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
-      }
-      .card {
-        height: 160px;
-      }
-      #login h2 {
-        font-size: 1.5rem;
-      }
-      .keypad {
-        grid-template-columns: repeat(3, 60px);
-        gap: 8px;
-      }
-      .keypad button {
-        font-size: 1rem;
-        padding: 12px;
-      }
+      h1 { font-size: 1.6rem; }
+      .stitch-icon { width: 60px; height: 60px; }
+      .gallery { grid-template-columns: repeat(auto-fill, minmax(130px, 1fr)); }
+      .card { height: 180px; }
+      #login h2 { font-size: 1.3rem; }
+      .keypad { grid-template-columns: repeat(3, 60px); }
+      .keypad button { font-size: 1.2rem; padding: 12px; }
     }
   </style>
 </head>
@@ -364,3 +346,4 @@
   </script>
 </body>
 </html>
+
