--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div id="loginWrap">
     <div class="login-card" id="loginCard">
       <h2>Ingresa la contraseña 💞</h2>
-      <input id="pwd" type="password" placeholder="Solo números" readonly>
+      <input id="pwd" type="password" placeholder="" readonly>
       <div class="keypad" aria-hidden="false">
         <button onclick="press('1')">1</button><button onclick="press('2')">2</button><button onclick="press('3')">3</button>
         <button onclick="press('4')">4</button><button onclick="press('5')">5</button><button onclick="press('6')">6</button>
@@ -399,3 +399,4 @@ document.addEventListener('keydown', e=>{
 </script>
 </body>
 </html>
+
